# onur-python

./: .containerignore  .envrc  .gitlab-ci.yml  CHANGELOG.md  Containerfile  Makefile  README.md  TODO.md  commands  manifest.scm  prepare.bash  prfix.bash  projects_commands  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: settings.toml
onur/: __main__.py  main.py
onur/actions/: klone.py  pull.py
onur/commands/: archive.py  grab.py
onur/database/: files.py  parse.py  queries.py
onur/misc/: globals.py  info.py  log.py  settings.py
onur/models/: config.py  project.py
tests/: test_hello.py
tests/database/: test_files.py  test_parse.py
tests/misc/: test_settings.py
