[tool.poetry]
name = "onur"
version = "0.2.0"
description = "Easily manage multiple FLOSS repositories"
authors = ["easbarba <easbarba@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
black = "^23.3.0"
gitpython = "^3.1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "onur.main:cli"
