[project]
name = "onur"
version = "0.4.2"
description = "Easily manage multiple FLOSS repositories"
authors = [{ name="easbarba", email="easbarba@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://gitlab.com/easbarba/onur2"
"Bug Tracker" = "https://gitlab.com/easbarba/onur2/-/issues"
