[project]
name = "onur"
version = "0.5.0"
description = "Easily manage multiple FLOSS repositories"
authors = [{ name="easbarba", email="easbarba@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
keywords = ["git", "repositories"]
dependencies = [
"astroid >= 2.15.5",
"black >= 23.3.0",
"click >= 8.1.3",
"dill >= 0.3.6",
"gitdb >= 4.0.10",
"GitPython >= 3.1.31",
"iniconfig >= 2.0.0",
"isort >= 5.12.0",
"lazy-object-proxy >= 1.9.0",
"mccabe >= 0.7.0",
"mypy-extensions >= 1.0.0",
"packaging >= 23.1",
"pathspec >= 0.11.1",
"platformdirs >= 3.6.0",
"pluggy >= 1.0.0",
"pylint >= 2.17.4",
"pytest >= 7.3.2",
"smmap >= 5.0.0",
"tomlkit >= 0.11.8",
"wrapt >= 1.15.0",
"termcolor >= 2.4.0"
]

[project.urls]
"Homepage" = "https://gitlab.com/easbarba/onur2"
"Bug Tracker" = "https://gitlab.com/easbarba/onur2/-/issues"
